--- a/inventory.ini
+++ b/inventory.ini
@@ -2,4 +2,4 @@
 172.31.29.61
 
 [local]
-localhost
+localhost course="Devops with AWS" duration=120hrs trainer=Siva ansible_user=ec2-user ansible_password=DevOps321
