--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [web]
-172.31.29.61
-
+172.31.82.169 course="Devops with AWS" duration=120hrs trainer=Siva ansible_user=ec2-user ansible_password=DevOps321
+; localhost
 [local]
 localhost course="Devops with AWS" duration=120hrs trainer=Siva ansible_user=ec2-user ansible_password=DevOps321
