--- a/facts.yaml
+++ b/facts.yaml
@@ -1,6 +1,6 @@
 - name: print the facts
   hosts: web
-  tasts:
+  tasks:
    - name: Print the facts
      ansible.builtin.debug:
      msg: "{{ansible_facts}}"
