--- a/conditions.yaml
+++ b/conditions.yaml
@@ -6,9 +6,9 @@
       ansible.builtin.dnf:
        name: nginx
        state: installed
-      when: ansible_os_family = "Redhat"
+      when: ansible_os_family == "Redhat"
     - name: install nginx if ubuntu
       ansible.builtin.apt:
        name: nginx
        state: installed
-      when: ansible_os_family = "Debian"
+      when: ansible_os_family == "Debian"
